unpackaged/main/default/objects/Case/fields/AccountNamedContactList__c.field-meta.xml
<CustomField>
    <fullName>AccountNamedContactList__c</fullName>
    <formula>Account.Named_Contact_List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountNamedContactList</label>
    <type>Text</type>
</CustomField>