unpackaged/main/default/objects/Case/fields/Additional_CC__c.field-meta.xml
<CustomField>
    <fullName>Additional_CC__c</fullName>
    <description>Include an additional list of email addresses separated by &#39;;&#39; semi-column</description>
    <inlineHelpText>Include an additional list of email addresses separated by &#39;;&#39; semi-column</inlineHelpText>
    <label>Additional CC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>