unpackaged/main/default/objects/Case/fields/Agreements__c.field-meta.xml
<CustomField>
    <fullName>Agreements__c</fullName>
    <description>Next steps or action items to take to avoid similar situations in the future</description>
    <inlineHelpText>Next steps or action items to take to avoid similar situations in the future</inlineHelpText>
    <label>Agreements</label>
    <type>TextArea</type>
</CustomField>