unpackaged/main/default/objects/Case/fields/Assign_to_T2__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_T2__c</fullName>
    <description>It is used for automatic escalation to T2Prod/Dev queues by the reps.</description>
    <label>Assign to T2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Escalation_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T2 Production</fullName>
            </value>
            <value>
                <fullName>T2 Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>