unpackaged/main/default/objects/Case/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>CASE(Account.Business_Unit__c,
&quot;Media&quot;,&quot;Media&quot;,
&quot;Digital Marketing&quot;, &quot;Digital Marketing&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>