unpackaged/main/default/objects/Case/fields/Case_Age_days__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_days__c</fullName>
    <formula>IF(IsClosed,
(ClosedDate - CreatedDate),
(NOW() - CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>