unpackaged/main/default/objects/Case/fields/Case_Close_Summary__c.field-meta.xml
<CustomField>
    <fullName>Case_Close_Summary__c</fullName>
    <label>Case Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>