unpackaged/main/default/objects/Case/fields/Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Case_Comment__c</fullName>
    <label>Case Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>