unpackaged/main/default/objects/Case/fields/Case_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Case_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Escalated</label>
    <type>Checkbox</type>
</CustomField>