unpackaged/main/default/objects/Case/fields/Case_Handoff_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Handoff_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Handoff Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Handoff_Owner_Case</relationshipName>
    <type>Lookup</type>
</CustomField>