unpackaged/main/default/objects/Case/fields/Case_Has_New_Comment_del__c.field-meta.xml
<CustomField>
    <fullName>Case_Has_New_Comment_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Has New Comment</label>
    <type>Checkbox</type>
</CustomField>