unpackaged/main/default/objects/Case/fields/Case_Sub_reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_reason__c</fullName>
    <label>Case Sub Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>New_Case_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party - AEM</fullName>
            </value>
            <value>
                <fullName>3rd Party Analytics</fullName>
            </value>
            <value>
                <fullName>3rd Party - Drupal</fullName>
            </value>
            <value>
                <fullName>3rd Party Integration - Other</fullName>
            </value>
            <value>
                <fullName>3rd Party - Microsoft Teams</fullName>
            </value>
            <value>
                <fullName>3rd Party - Salesforce</fullName>
            </value>
            <value>
                <fullName>3rd Party - Sharepoint</fullName>
            </value>
            <value>
                <fullName>3rd Party - Sitecore</fullName>
            </value>
            <value>
                <fullName>3rd Party - Wordpress</fullName>
            </value>
            <value>
                <fullName>Access Control</fullName>
            </value>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>Account/Asset Configuration</fullName>
            </value>
            <value>
                <fullName>Account - Activate</fullName>
            </value>
            <value>
                <fullName>Account - Activate (BC Internal)</fullName>
            </value>
            <value>
                <fullName>Account - Add</fullName>
            </value>
            <value>
                <fullName>Account Creation</fullName>
            </value>
            <value>
                <fullName>Account - Downgrade</fullName>
            </value>
            <value>
                <fullName>Account Lock - Cancellation</fullName>
            </value>
            <value>
                <fullName>Account Lock - Finance</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Account Settings</fullName>
            </value>
            <value>
                <fullName>Account Trial Extension</fullName>
            </value>
            <value>
                <fullName>Account - Unlock</fullName>
            </value>
            <value>
                <fullName>Account - Upgrade</fullName>
            </value>
            <value>
                <fullName>Adobe Magento Commerce Integration</fullName>
            </value>
            <value>
                <fullName>Ad Settings (Cloud Playout)</fullName>
            </value>
            <value>
                <fullName>Ad Settings (CSAI)</fullName>
            </value>
            <value>
                <fullName>Ad Settings (SSAI)</fullName>
            </value>
            <value>
                <fullName>Ad Settings (Studio)</fullName>
            </value>
            <value>
                <fullName>Ad Trafficking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>