unpackaged/main/default/objects/Case/fields/Case_Summary_Update_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Summary_Update_Time__c</fullName>
    <label>Case Summary Update Time</label>
    <type>DateTime</type>
</CustomField>