unpackaged/main/default/objects/Case/fields/Case_Title__c.field-meta.xml
<CustomField>
    <fullName>Case_Title__c</fullName>
    <formula>HYPERLINK(&#39;/console?tsid=02u140000010MgQ#%2F&#39;+ Id,  Title__c , &quot;_parent&quot;)</formula>
    <label>Case Title</label>
    <type>Text</type>
</CustomField>