unpackaged/main/default/objects/Case/fields/Channel_s_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Channel_s_Impacted__c</fullName>
    <description>Add names of channels that were impacted by the issue reported on this case</description>
    <inlineHelpText>A comma-separated list of channels that were impacted by the issue reported on this case</inlineHelpText>
    <label>Channel(s) Impacted</label>
    <type>TextArea</type>
</CustomField>