unpackaged/main/default/objects/Case/fields/Close_Case_Same_Day__c.field-meta.xml
<CustomField>
    <fullName>Close_Case_Same_Day__c</fullName>
    <description>it is true if the case is opened and closed on the same day</description>
    <formula>/*if the case is opened and solved the same day*/
IF(  ClosedDate = CreatedDate , true, false)</formula>
    <label>Close Case Same Day</label>
    <type>Checkbox</type>
</CustomField>