unpackaged/main/default/objects/Case/fields/Closed_While_T2_Dev__c.field-meta.xml
<CustomField>
    <fullName>Closed_While_T2_Dev__c</fullName>
    <formula>DATEVALUE(ClosedDate) &gt;  Owner:User.Date_Made_Tier_2_Development__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed While T2 Dev</label>
    <type>Checkbox</type>
</CustomField>