unpackaged/main/default/objects/Case/fields/Closed_While_T2_Prod__c.field-meta.xml
<CustomField>
    <fullName>Closed_While_T2_Prod__c</fullName>
    <formula>IF( Closed_While_T2_Dev__c = TRUE,FALSE,DATEVALUE(ClosedDate) &gt;  Owner:User.Date_Made_Tier_2_Production__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed While T2 Prod</label>
    <type>Checkbox</type>
</CustomField>