unpackaged/main/default/objects/Case/fields/ClosedDate_Weekday__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate_Weekday__c</fullName>
    <description>It stores the weekday name of the close date time.</description>
    <formula>CASE( 
MOD( DATEVALUE(ClosedDate) - DATE(1900, 1, 7), 7), 
0, &quot;Sunday&quot;, 
1, &quot;Monday&quot;, 
2, &quot;Tuesday&quot;, 
3,&quot;Wednesday&quot;, 
4, &quot;Thursday&quot;, 
5, &quot;Friday&quot;, 
6, &quot;Saturday&quot;,
&quot;Still open&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ClosedDate Weekday</label>
    <type>Text</type>
</CustomField>