unpackaged/main/default/objects/Case/fields/Console_Case_Link__c.field-meta.xml
<CustomField>
    <fullName>Console_Case_Link__c</fullName>
    <formula>&quot;https://brightcove.my.salesforce.com/console#%2&quot;&amp;CASESAFEID(Id)&amp;&quot;%3Fnooverride%3D1&quot;</formula>
    <label>Console Case Link</label>
    <type>Text</type>
</CustomField>