unpackaged/main/default/objects/Case/fields/CreateDateGMT__c.field-meta.xml
<CustomField>
    <fullName>CreateDateGMT__c</fullName>
    <formula>TIMEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreateDateGMT</label>
    <type>Time</type>
</CustomField>