unpackaged/main/default/objects/Case/fields/Date_Time_Last_Ownership_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Last_Ownership_Change__c</fullName>
    <description>Used to store the date/time of the last time an ownership change was made on a ticket. Used to track how many tickets are re-assigned to people in a timeframe.</description>
    <inlineHelpText>Used to store the date/time of the last time an ownership change was made on a ticket.</inlineHelpText>
    <label>Date/Time Last Ownership Change</label>
    <type>DateTime</type>
</CustomField>