unpackaged/main/default/objects/Case/fields/Do_Update__c.field-meta.xml
<CustomField>
    <fullName>Do_Update__c</fullName>
    <description>This field is used by a Case trigger to determine which email to send to the Case Contact. This field should NOT appear on any page layouts.</description>
    <label>Do Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>