unpackaged/main/default/objects/Case/fields/Documentation_Used__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Used__c</fullName>
    <label>Documentation Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Knowledge</fullName>
            </value>
            <value>
                <fullName>Public Documentation</fullName>
            </value>
            <value>
                <fullName>Confluence</fullName>
            </value>
            <value>
                <fullName>Brightcove University</fullName>
            </value>
            <value>
                <fullName>No documentation needed</fullName>
            </value>
            <value>
                <fullName>Documentation missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>