unpackaged/main/default/objects/Case/fields/Escalating_As__c.field-meta.xml
<CustomField>
    <fullName>Escalating_As__c</fullName>
    <label>Escalating As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TSR</fullName>
            </value>
            <value>
                <fullName>T1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>