unpackaged/main/default/objects/Case/fields/Escalation_Follow_up_Completed__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Follow_up_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check once all steps have been completed</description>
    <label>Coaching Completed?</label>
    <type>Checkbox</type>
</CustomField>