unpackaged/main/default/objects/Case/fields/Escalation_Follow_up_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Follow_up_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who will receive coaching after the escalation is closed</description>
    <label>Coaching Recipient</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.CS_Role__c</field>
            <operation>equals</operation>
            <value>CSR, Tier 1, Tier 2 Production, Tier 2 Development, Manager, Tier 3, NOC</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>