unpackaged/main/default/objects/Case/fields/Escalation_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Time__c</fullName>
    <label>Escalation Time</label>
    <type>DateTime</type>
</CustomField>