unpackaged/main/default/objects/Case/fields/Escalation_Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Time_Taken__c</fullName>
    <description>This field will be populated when a T2 takes ownership once a case has been escalated.</description>
    <inlineHelpText>This field is not editable. It will be modified with a trigger.</inlineHelpText>
    <label>T2 Ownership Taken</label>
    <type>DateTime</type>
</CustomField>