unpackaged/main/default/objects/Case/fields/EST_Modifier__c.field-meta.xml
<CustomField>
    <fullName>EST_Modifier__c</fullName>
    <formula>CASE( 
MONTH( DATEVALUE(CreatedDate) ), 
1,-(5/24), 
2,-(5/24), 
12,-(5/24), 
4,-(4/24), 
5,-(4/24), 
6,-(4/24), 
7,-(4/24), 
8,-(4/24), 
9,-(4/24), 
10,-(4/24), 
3, 
IF(DAY(DATEVALUE(CreatedDate)) - FLOOR(MOD((CreatedDate - $System.OriginDateTime +1),7)) &gt;= 8 ,-(4/24),-(5/24)), 
11, 
IF(DAY(DATEVALUE(CreatedDate)) - FLOOR(MOD((CreatedDate - $System.OriginDateTime +1),7)) &lt; 1 ,-(4/24),-(5/24)),0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EST Modifier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>