unpackaged/main/default/objects/Case/fields/Event_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Event_Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Canceled</label>
    <type>Checkbox</type>
</CustomField>